update form heights and overall overflow, fix padding, gap, and marginal spacing

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,16 @@ body {
   background-color: indigo;
   border-radius: 30px;
 }
+
+.birth-cal, .quiz-cal, .love-cal, .soul-cal, .num-cal, .zodiac-cal {
+  &::-webkit-scrollbar {
+    background-color: rgba(18, 6, 62, 0.17);
+    border-radius: 30px;
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(25, 12, 72);
+    border-radius: 30px;
+  }
+}
